--- a/TodoMvu.fsproj
+++ b/TodoMvu.fsproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <Compile Include="Task.fs" />
     <Compile Include="App.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
